<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/settings_title">

    <ListPreference
        android:defaultValue="@string/category_default"
        android:dialogTitle="@string/pref_topic_title"
        android:entries="@array/pref_topic_labels"
        android:entryValues="@array/pref_topic_values"
        android:key="@string/pref_topic_key"
        android:summary="%s"
        android:title="@string/pref_topic_title" />

    <ListPreference
        android:defaultValue="@string/pref_order_by_default"
        android:entries="@array/pref_order_by_labels"
        android:entryValues="@array/pref_order_by_values"
        android:key="@string/pref_order_by_key"
        android:summary="%s"
        android:title="@string/pref_order_by_title" />

</PreferenceScreen>