<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!-- Toolbar for Categories -->
            <androidx.appcompat.widget.Toolbar
                android:id="@+id/main_toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryDark">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/toolbar_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="@dimen/text_size_s"
                        android:layout_marginLeft="@dimen/text_size_s"
                        android:includeFontPadding="false"
                        android:text="@string/app_name"
                        android:textColor="@color/appTextColor"
                        android:textSize="@dimen/text_size_m" />

                </LinearLayout>
            </androidx.appcompat.widget.Toolbar>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/category_menu_background"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/toolbar_subtitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:includeFontPadding="false"
                    android:text="@string/category_default"
                    android:textAlignment="center"
                    android:textAppearance="@style/AppSubTitleText"
                    android:textSize="@dimen/text_size_s" />
            </LinearLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <ListView
            android:id="@+id/list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/main_toolbar"
            android:clipToPadding="false"
            android:divider="@null"
            android:dividerHeight="0dp"
            android:orientation="vertical"
            android:paddingBottom="@dimen/margin_s"
            tools:listitem="@layout/news_item" />
    </LinearLayout>

    <!-- Empty View will be shown if there are no News to display -->
    <TextView
        android:id="@+id/empty_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/no_news"
        android:textAppearance="?android:textAppearanceMedium"
        android:textColor="@android:color/darker_gray" />

    <!-- Loading indicator is only shown before the first load -->
    <ProgressBar
        android:id="@+id/loading_indicator"
        style="@style/Widget.AppCompat.ProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true" />

</RelativeLayout>